# oppy-os

./: Containerfile  Justfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
system/usr/etc/skel/.config/: mimeapps.list
system/usr/etc/systemd/user/: oppy-os-initial-setup.service
system/usr/etc/xdg/autostart/: 1password-watchdog.desktop
system/usr/libexec/: 1password-watchdog.sh
system/usr/libexec/oppy-os/: initial-setup.sh
system/usr/share/ublue-os/just/: 60-custom.just
